--- a/index.html
+++ b/index.html
@@ -15,9 +15,216 @@
   <body>
 
 
-    
-   
+    <header>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand nav-logo" href="#">ModGuard</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav  ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="vote.html">Vote</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="support.html">Support</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="plans.html">Plans</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="custom-branding.html">Custom branding</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link nav-btn">Login</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
+    <section class="hero">
+      <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-lg-4">
+            <div class="modguard-info">
+              <h1>Hi, I'm ModGuard</h1>
+              <p>I'm an awesome Discord Bot.</p>
+              <a href="#" class="main-btn">Invite</a>
+            </div>
+          </div>
+          <div class="col-lg-4">
+              <img src="images/hero-img.svg" class="image-fluid w-100" alt="main image">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <main>
+      <section class="server-section section-padding">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class="section-heading">
+                <h2>Who trusts us</h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>  
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 gy-3">
+              <div class="server-items">
+                <div class="server-item-img">
+                  <img src="images/server-img.png" alt="">
+                </div>
+                <div class="server-item-content">
+                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <small>16.000+ members</small>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </section>
+    </main>
+
+
+
+
+
+
+    <footer class="footer" id="footer">
+      <div class="container">
+       <div class="row">
+         <div class="col-lg-3  offset-lg-1">
+           <div class="footer-logo">ModGuard</div>
+            <p class="copyright-text">© ModGuard 2021-2023</p>
+         </div>
+         <div class="col-lg-2 footer-links">
+           <h4>SOCIAL MEDIA</h4>
+           <ul> 
+             <li><a href="#">Twitter</a></li>
+             <li><a href="#">Instagram</a></li>
+             <li><a href="#">TikTok</a></li>
+             <li><a href="#">Discord</a></li>
+           </ul>
+         </div>
+         <div class="col-lg-2 footer-links">
+          <h4>RECOMMENDED</h4>
+           <ul> 
+             <li><a href="#">Home</a></li>
+             <li><a href="#">Support</a></li>
+             <li><a href="#">Plans</a></li>
+           </ul>
+         </div>
+         <div class="col-lg-2 footer-links">
+          <h4>COMPANY</h4>
+           <ul> 
+             <li><a href="#">About</a></li>
+             <li><a href="#">Contact</a></li>
+             <li><a href="#">Branding</a></li>
+           </ul>
+         </div>
+         <div class="col-lg-2 footer-links">
+            <h4>LEGAL</h4>
+           <ul> 
+             <li><a href="#">Imprint</a></li>
+             <li><a href="#">Privacy Policy</a></li>
+             <li><a href="#">Terms of Service</a></li>
+           </ul>
+         </div>
+       </div>
+      </div>
+   </footer>
    
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
