home page is done

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                   <img src="images/server-img.png" alt="">
                 </div>
                 <div class="server-item-content">
-                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <h5>Server Name <img src="images/icon-verified2.svg" alt="icon-verified"> </h5>
                     <small>16.000+ members</small>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                   <img src="images/server-img.png" alt="">
                 </div>
                 <div class="server-item-content">
-                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <h5>Server Name <img src="images/icon-verified2.svg" alt="icon-verified"> </h5>
                     <small>16.000+ members</small>
                 </div>
               </div>
@@ -154,7 +154,7 @@
                   <img src="images/server-img.png" alt="">
                 </div>
                 <div class="server-item-content">
-                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <h5>Server Name <img src="images/icon-verified2.svg" alt="icon-verified"> </h5>
                     <small>16.000+ members</small>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                   <img src="images/server-img.png" alt="">
                 </div>
                 <div class="server-item-content">
-                    <h5>Server Name <img src="images/icon-verified.svg" alt="icon-verified"> </h5>
+                    <h5>Server Name <img src="images/icon-verified2.svg" alt="icon-verified"> </h5>
                     <small>16.000+ members</small>
                 </div>
               </div>
@@ -175,6 +175,69 @@
           </div>
         </div>
       </section>
+
+      <section class="feature-section section-padding">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class="section-heading">
+                <h2>Features</h2>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 g-5">
+              <div class="feature-items">
+                <h2>Systemban</h2>
+                <div class="border-bottom pink"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, maiores! Molestias fugiat saepe delectus cum quod quam 
+                 eum natus distinctio voluptate rerum quos beatae sint est animi?</p>
+                 <img src="images/feature-img.png" alt="Feature Image">
+              </div>
+            </div>  
+            
+            <div class="col-lg-6 g-5">
+              <div class="feature-items">
+                <h2>Max Members</h2>
+                <div class="border-bottom dark-pink"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, maiores! Molestias fugiat saepe delectus cum quod quam 
+                 eum natus distinctio voluptate rerum quos beatae sint est animi?</p>
+                 <img src="images/feature-img.png" alt="Feature Image">
+              </div>
+            </div>
+
+            <div class="col-lg-6 g-5">
+              <div class="feature-items">
+                <h2>Reaction Roles</h2>
+                <div class="border-bottom red"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, maiores! Molestias fugiat saepe delectus cum quod quam 
+                 eum natus distinctio voluptate rerum quos beatae sint est animi?</p>
+                 <img src="images/feature-img.png" alt="Feature Image">
+              </div>
+            </div>
+
+            <div class="col-lg-6 g-5">
+              <div class="feature-items">
+                <h2>Embed Sender</h2>
+                <div class="border-bottom blue"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, maiores! Molestias fugiat saepe delectus cum quod quam 
+                 eum natus distinctio voluptate rerum quos beatae sint est animi?</p>
+                 <img src="images/feature-img.png" alt="Feature Image">
+              </div>
+            </div> 
+          </div>
+        </div>
+      </section>
+
+      <section class="madguard-info section-padding">
+          <div class="row text-center">
+            <div class="visit-modguard">
+            <h2>What are you waiting for?</h2>
+            <a href="#" class="invite-btn">Invite ModGuard</a>
+          </div>
+          </div>
+      </section>
+
     </main>
 
 
