Done project few thing left

--- a/custom-branding.html
+++ b/custom-branding.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-3 g-5">
+            <div class="col-lg-4 g-5">
               <div class="pricing-card">
                 <div class="card-head">
                     <h4 class="text-center">Overview</h4>
@@ -79,90 +79,61 @@
                 </div>
               </div>
             </div>  
-            <div class="col-lg-3 g-5">
-                <div class="pricing-card">
-                  <div class="card-head">
-                    <div class="card-profile">
-                        <div class="profile-img">
-                            <img class="me-2" src="images/profile-1.png" alt="Card Image">
-                        </div>
-                        <div class="profile-info">
-                            <h4>Public</h4>
-                            <a href="#" class="pro-btn">Free</a>
-                        </div>
+            <div class="col-lg-4 g-5">
+             <div class="pricing-card">
+                <div class="card-head">
+                <div class="card-profile">
+                    <div class="profile-img">
+                        <img class="me-2" src="images/profile-1.png" alt="Card Image">
                     </div>
-                  </div>
-                  <div class="card-body">
-                      <small>Description</small>
-                      <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
-                      <ul>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-red-close.svg" alt=""></li>
-                          <li><img src="images/icon-red-close.svg" alt=""></li>
-                          <li><img src="images/icon-red-close.svg" alt=""></li>
-                          <li><a href="#" class="pricing-card-btn">Invite</a></li>
-                      </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-3 g-5">
-                <div class="pricing-card">
-                  <div class="card-head">
-                    <div class="card-profile">
-                        <div class="profile-img">
-                            <img class="me-2" src="images/profile-1.png" alt="Card Image">
-                        </div>
-                        <div class="profile-info">
-                            <h4>Public</h4>
-                            <a href="#" class="pro-btn bg-pink">4,99$/month</a>
-                            <a href="#" class="pro-btn bg-pink">49,99$/year</a>
-                        </div>
+                    <div class="profile-info">
+                        <h4>Public</h4>
+                        <a href="#" class="pro-btn">Free</a>
                     </div>
-                  </div>
-                  <div class="card-body">
-                      <small>Description</small>
-                      <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
-                      <ul>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-red-close.svg" alt=""></li>
-                          <li><a href="#" class="pricing-card-btn">GET NOW</a></li>
-                      </ul>
-                  </div>
                 </div>
-              </div>
-              <div class="col-lg-3 g-5">
-                <div class="pricing-card">
-                  <div class="card-head">
-                    <div class="card-profile">
-                        <div class="profile-img">
-                            <img class="me-2" src="images/profile-1.png" alt="Card Image">
-                        </div>
-                        <div class="profile-info">
-                            <h4>Public <span>+</span></h4>
-                            <a href="#" class="pro-btn">12,99$/month</a>
-                            <a href="#" class="pro-btn">99,99$/year</a>
-                            <a href="#" class="last-pro-btn">BESTSELLER</a>
-                        </div>
+                </div>
+                <div class="card-body">
+                    <small>Description</small>
+                    <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
+                    <ul> 
+                        <li><img src="images/icon-red-close.svg" alt=""></li>
+                        <li><img src="images/icon-red-close.svg" alt=""></li>
+                        <li><img src="images/icon-red-close.svg" alt=""></li>
+                        <li><img src="images/icon-red-close.svg" alt=""></li>
+                        <li><img src="images/icon-red-close.svg" alt=""></li>
+                        <li><a href="#" class="pricing-card-btn">Invite</a></li>
+                    </ul>
+                </div>
+            </div>
+            </div>
+            <div class="col-lg-4 g-5">
+            <div class="pricing-card">
+                <div class="card-head">
+                <div class="card-profile">
+                    <div class="profile-img">
+                        <img class="me-2" src="images/profile-1.png" alt="Card Image">
                     </div>
-                  </div>
-                  <div class="card-body">
-                      <small>Description</small>
-                      <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
-                      <ul>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><img src="images/icon-green-check.svg" alt=""></li>
-                          <li><a href="#" class="pricing-card-btn">GET NOW</a></li>
-                      </ul>
-                  </div>
+                    <div class="profile-info">
+                        <h4>Custom Branded</h4>
+                        <a href="#" class="pro-btn">4,99$/month</a>
+                        <a href="#" class="pro-btn">49,99$/year</a>
+                    </div>
                 </div>
-              </div>
+                </div>
+                <div class="card-body">
+                    <small>Description</small>
+                    <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. </p>
+                    <ul>
+                        <li><img src="images/icon-green-check.svg" alt=""></li>
+                        <li><img src="images/icon-green-check.svg" alt=""></li>
+                        <li><img src="images/icon-green-check.svg" alt=""></li>
+                        <li><img src="images/icon-green-check.svg" alt=""></li> 
+                        <li><img src="images/icon-green-check.svg" alt=""></li> 
+                        <li><a href="#" class="pricing-card-btn">GET NOW</a></li>
+                    </ul>
+                </div>
+            </div>
+            </div> 
 
              
           </div>
