--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -18,20 +18,20 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand nav-logo" href="#">ModGuard</a>
+          <a class="navbar-brand nav-logo" href="index.html">ModGuard</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <img src="images/hamburger-menu.png" alt="" class="image-fluid" width="50">
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Features</a>
+                <a class="nav-link active" aria-current="page" href="feature.html">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="vote.html">Vote</a>
+                <a class="nav-link" href="#">Vote</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="support.html">Support</a>
+                <a class="nav-link" href="#">Support</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="plans.html">Plans</a>
@@ -124,25 +124,25 @@
          <div class="col-lg-2 footer-links">
           <h4>RECOMMENDED</h4>
            <ul> 
-             <li><a href="#">Home</a></li>
+             <li><a href="index.html">Home</a></li>
              <li><a href="#">Support</a></li>
-             <li><a href="#">Plans</a></li>
+             <li><a href="plans.html">Plans</a></li>
            </ul>
          </div>
          <div class="col-lg-2 footer-links">
           <h4>COMPANY</h4>
            <ul> 
-             <li><a href="#">About</a></li>
+             <li><a href="about.html">About</a></li>
              <li><a href="#">Contact</a></li>
-             <li><a href="#">Branding</a></li>
+             <li><a href="branding.html">Branding</a></li>
            </ul>
          </div>
          <div class="col-lg-2 footer-links">
             <h4>LEGAL</h4>
            <ul> 
-             <li><a href="#">Imprint</a></li>
-             <li><a href="#">Privacy Policy</a></li>
-             <li><a href="#">Terms of Service</a></li>
+             <li><a href="imprint.html">Imprint</a></li>
+             <li><a href="privacy-policy.html">Privacy Policy</a></li>
+             <li><a href="terms-of-service.html">Terms of Service</a></li>
            </ul>
          </div>
        </div>
