--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -88,7 +88,7 @@
               </div>
             </div>  
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -100,7 +100,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -112,7 +112,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -124,7 +124,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -136,7 +136,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -148,7 +148,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
@@ -160,7 +160,7 @@
               </div>
             </div>
 
-            <div class="col-lg-3 gy-3">
+            <div class="col-lg-3 col-md-4 col-6 gy-3">
               <div class="server-items">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
