Fix responsive issue

--- a/parent-information.html
+++ b/parent-information.html
@@ -54,21 +54,22 @@
         <h2 class="page-heading">Parent Information</h2>
       </div>
 
-          <section class="exclamation-section">
-            <div class="container">
-              <div class="row align-items-center">
-                <div class="col-lg-1 text-start">
-                  <span class="exclamation-mark">!</span>
-                </div>
-                <div class="col-lg-10 text-center">
-                  <p class="mb-0 exclamation-paragraph">Due to legal regulations, the legal texts are only available in German.</p>
-                </div>
-                <div class="col-lg-1 text-end">
-                  <span class="exclamation-mark">!</span>
-                </div>
-              </div>
+      <section class="exclamation-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-1 text-start">
+              <span class="exclamation-mark">!</span>
             </div>
-          </section>
+            <div class="col-10 text-center">
+              <p class="mb-0 exclamation-paragraph">Due to legal regulations, the legal texts are only available in German.</p>
+            </div>
+            <div class="col-1 text-end">
+              <span class="exclamation-mark">!</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
           <section class="imprint-content">
             <div class="container">
