--- a/imprint.html
+++ b/imprint.html
@@ -57,13 +57,13 @@
           <section class="exclamation-section">
             <div class="container">
               <div class="row align-items-center">
-                <div class="col-lg-1 text-start">
+                <div class="col-1 text-start">
                   <span class="exclamation-mark">!</span>
                 </div>
-                <div class="col-lg-10 text-center">
+                <div class="col-10 text-center">
                   <p class="mb-0 exclamation-paragraph">Due to legal regulations, the legal texts are only available in German.</p>
                 </div>
-                <div class="col-lg-1 text-end">
+                <div class="col-1 text-end">
                   <span class="exclamation-mark">!</span>
                 </div>
               </div>
