--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <section class="hero">
       <div class="container">
         <div class="row align-items-center justify-content-center">
-          <div class="col-lg-4">
-            <div class="modguard-info">
+          <div class="col-lg-4 mb-4 mb-md-0">
+            <div class="modguard-info text-center text-md-start">
               <h1>Hi, I'm ModGuard</h1>
               <p>I'm an awesome Discord Bot.</p>
               <a href="#" class="main-btn">Invite</a>
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 mb-4 mb-md-0">
               <img src="images/hero-img.svg" class="image-fluid w-100" alt="main image">
           </div>
         </div>
@@ -77,7 +77,7 @@
           </div>
           <div class="row">
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -89,7 +89,7 @@
             </div>  
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -113,7 +113,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -137,7 +137,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -149,7 +149,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-6 gy-3">
-              <div class="server-items">
+              <div class="server-items gap-4">
                 <div class="server-item-img">
                   <img src="images/server-img.png" alt="">
                 </div>
