--- a/custom-branding.html
+++ b/custom-branding.html
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="section-heading">
-                <h2>Plans</h2>
+                <h2>Custom Branding</h2>
               </div>
             </div>
           </div>
@@ -73,7 +73,7 @@
                         <li>´Text</li>
                         <li>´Text</li>
                         <li>´Text</li>
-                        <li>´Text</li>
+                        <li>´Text</li> 
                         <li><span class="py-2 d-block"></span></li>
                     </ul>
                 </div>
