--- a/statistics.html
+++ b/statistics.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Modguard - About Page</title>
+    <title>Modguard - Statistics Page</title>
     
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,10 +54,10 @@
             <h2 class="page-heading">Statistics</h2>
           </div>
 
-         <section class="status-bar-services section-padding">
+         <section class="status-bar-services section-padding mb-5">
           <div class="container">
             <div class="row">
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>257</h4>
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>430608</h4>
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>257</h4>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>430608</h4>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 g-4">
+                <div class="col-lg-4 col-6 g-4">
                     <div class="service-card">
                         <div class="card-content">
                             <h4>300000</h4>
