some change done

--- a/status.html
+++ b/status.html
@@ -224,7 +224,7 @@
                     <div class="server-cluster-card">
                         <div class="server-card-head">
                             <h3>Server Cluster 1</h3>
-                            <span class="badge">ONLINE</span>
+                            <span class="badge bg-green">ONLINE</span>
                         </div>
                      <div class="server-card-body">
                         <div class="card-badge bg-green">
@@ -264,7 +264,7 @@
                     <div class="server-cluster-card">
                         <div class="server-card-head">
                             <h3>Server Cluster 2</h3>
-                            <span class="badge">ONLINE</span>
+                            <span class="badge bg-gray">OFFLINE</span>
                         </div>
                      <div class="server-card-body">
                         <div class="card-badge bg-green">
@@ -304,7 +304,7 @@
                 <div class="server-cluster-card">
                     <div class="server-card-head">
                         <h3>Server Cluster 3</h3>
-                        <span class="badge">ONLINE</span>
+                        <span class="badge bg-red1">DOWN</span>
                     </div>
                  <div class="server-card-body">
                     <div class="card-badge bg-green">
@@ -344,7 +344,7 @@
             <div class="server-cluster-card">
                 <div class="server-card-head">
                     <h3>Server Cluster 4</h3>
-                    <span class="badge">ONLINE</span>
+                    <span class="badge bg-pink1">MAINTENANCE</span>
                 </div>
              <div class="server-card-body">
                 <div class="card-badge bg-green">
@@ -384,7 +384,7 @@
             <div class="server-cluster-card">
                 <div class="server-card-head">
                     <h3>Server Cluster 5</h3>
-                    <span class="badge">ONLINE</span>
+                    <span class="badge bg-midyellow">HIGH PING</span>
                 </div>
             <div class="server-card-body">
                 <div class="card-badge bg-green">
@@ -424,7 +424,7 @@
         <div class="server-cluster-card">
             <div class="server-card-head">
                 <h3>Server Cluster 6</h3>
-                <span class="badge">ONLINE</span>
+                <span class="badge bg-gold">UNKNOWN</span>
             </div>
          <div class="server-card-body">
             <div class="card-badge bg-green">
