some changes done

--- a/guilds-details.html
+++ b/guilds-details.html
@@ -74,10 +74,10 @@
                         </div>
                         <div class="sidebar-links">
                             <ul>
-                                <li>General</li>
-                                <li>Logs</li>
-                                <li>Global Bans</li>
-                                <li>Global Bans</li>
+                                <a href="#"><li>General</li></a>
+                                <a href="#"></a><li>Logs</li></a>
+                                <a href="#"><li>Global Bans</li></a>
+                                <a href="#"><li>Global Bans</li></a>
                             </ul>
                         </div>
                     </div>
