--- a/guilds-details.html
+++ b/guilds-details.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="sidebar-footer">
-                        <img src="images/💎 subscription.svg" alt="Subscription Manager">
+                        <a href="#"><img src="images/subscription-btn.svg" alt="Subscription Manager"></a>
                     </div>
                 </div>
              </div>    
