--- a/leaderboard.html
+++ b/leaderboard.html
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table">
+                    <table class="table table-borderless" style="border-collapse: separate; border-spacing:0 20px;">
                         <thead class="mb-5">
                           <tr>
                             <th scope="col">#</th>
