--- a/leaderboard.html
+++ b/leaderboard.html
@@ -58,7 +58,7 @@
           <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img src="images/leaderboard-main-image.png" style="width: 100%;" class="image-fluid mb-5" alt="Leaderboard-Image">
+                    <img src="images/leaderboard-main-image.png" class="image-fluid w-100 mb-5" alt="Leaderboard-Image">
                 </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
 
       <section class="support-section pt-3 pb-5">
          <div class="container">
-            <div class="row">
+            <div class="row flex-wrap">
                 <div class="support-card">
                     <div class="card-item-left">
                         <img src="images/support-image.png" alt="Support-Image">
