--- a/leaderboard.html
+++ b/leaderboard.html
@@ -66,8 +66,9 @@
 
       <section class="support-section pt-3 pb-5">
          <div class="container">
-            <div class="row flex-wrap">
-                <div class="support-card">
+            <div class="row">
+               <div class="col-lg-12">
+                <div class="support-card flex-wrap">
                     <div class="card-item-left">
                         <img src="images/support-image.png" alt="Support-Image">
                         <div>
@@ -87,6 +88,7 @@
                         </div>
                     </div>
                 </div>
+               </div>
             </div>
          </div>
       </section>
