--- a/leaderboard.html
+++ b/leaderboard.html
@@ -97,7 +97,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <table class="table table-borderless">
+                    <div class="table-responsive">
+                      <table class="table  table-borderless">
                         <thead class="mb-5">
                           <tr>
                             <th scope="col">#</th>
@@ -529,6 +530,7 @@
                           </tr>
                         </tbody>
                       </table>
+                    </div>
                 </div>
             </div>
         </div>
