fix some changes

--- a/guilds.html
+++ b/guilds.html
@@ -57,7 +57,7 @@
          <section class="guilds-section pb-5">
           <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
@@ -149,7 +149,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-6 g-4">
+                <div class="col-lg-6  g-4">
                     <div class="guilds-card">
                         <div class="card-content">
                             <img src="images/service-img.png" alt="Service Image">
