--- a/leaderboard.html
+++ b/leaderboard.html
@@ -69,14 +69,14 @@
             <div class="row">
                <div class="col-lg-12">
                 <div class="support-card flex-wrap">
-                    <div class="card-item-left">
+                    <div class="card-item-left mb-3 mb-md-0">
                         <img src="images/support-image.png" alt="Support-Image">
                         <div>
                             <h4>ModGuard Support</h4>
                             <small>1042130500669689917</small>
                         </div>
                     </div>
-                    <div class="card-item-right">
+                    <div class="card-item-right  mb-3 mb-md-0">
                         <div class="service-card">
                             <div class="card-content">
                                 <h4>250</h4>
