fix responsive issues

--- a/balance.html
+++ b/balance.html
@@ -59,13 +59,13 @@
         <div class="container ">
             <div class="global-form">
                 <div class="row justify-content-center mb-4">
-                    <div class="col-md-7 text-end">
+                    <div class="col-md-7 text-md-end text-center">
                         <h4 class="form-heading">Balance: 5,00€</h4>
                     </div>
 
-                    <div class="col-md-5 text-end"> 
-                            <button type="submit" class="btn-site ms-2">Show Fee</button> 
-                            <button type="submit" class="btn-site ms-2">Show Transactions</button> 
+                    <div class="col-md-5 text-md-end text-center"> 
+                            <button type="submit" class="btn-site ms-2 mb-2 mb-md-0">Show Fee</button> 
+                            <button type="submit" class="btn-site ms-2 mb-2 mb-md-0">Show Transactions</button> 
                     </div>
                    
                 </div>
