--- a/account.html
+++ b/account.html
@@ -64,8 +64,8 @@
                         <h4 class="form-heading">Basic Information </h4>
                     </div>
 
-                    <div class="col-md-12 text-end"> 
-                            <button type="submit" class="btn-site me-5">Save</button> 
+                    <div class="col-md-12 text-md-end text-center"> 
+                            <button type="submit" class="btn-site me-md-5 me-0">Save</button> 
                     </div>
                    
                 </div>
@@ -134,25 +134,25 @@
       <section class="section-padding">
         <div class="container">
           <div class="account-bottom">
-            <div class="d-flex align-items-center gap-5 mb-4">
-              <div>
+            <div class="row align-items-center mb-4 ">
+              <div class="col-md-3 mb-4 mb-md-0">
                 <a href="#" class="btn btn-success-gradient">
                   <span>REQUEST DATA</span>
                 </a>
               </div>
-              <div >
+              <div class="col-md-9" >
                 <h4>Request your data. This data will be sent to your linked account email. The request may take up to 14 days.</h4>
                 <p class="mb-0">Connected E-Mail: <a href="mailto:connected@mail.xyz">connected@mail.xyz</a></p>
               </div>
             </div>
 
-            <div class="d-flex align-items-center gap-5 mb-4">
-              <div>
+            <div class="row align-items-center mb-4 ">
+              <div class="col-md-3 mb-4 mb-md-0">
                 <a href="#" class="btn btn-danger-gradient">
                   <span>DELETE ACCOUNT</span>
                 </a>
               </div>
-              <div >
+              <div class="col-md-9">
                 <h4 class="mb-0">Delete your account. This request can take up to 7 days.</h4> 
               </div>
             </div>
