--- a/donate.html
+++ b/donate.html
@@ -60,7 +60,7 @@
             <div class="global-form">
                 <div class="row justify-content-center mb-4"> 
 
-                    <div class="col-md-12 text-end mb-4"> 
+                    <div class="col-md-12 text-md-end text-center mb-4"> 
                             <button type="submit" class="btn-site ms-2">Show Fee</button> 
                             <button type="submit" class="btn-site ms-2">Show Transactions</button> 
                     </div>
