--- a/429.html
+++ b/429.html
@@ -14,6 +14,16 @@
   </head>
   <body>
 
+       <!-- Preloader -->
+        <div class="spinner-wrapper">
+          <div class="spinner">
+              <div class="bounce1"></div>
+              <div class="bounce2"></div>
+              <div class="bounce3"></div>
+          </div>
+      </div>
+      <!-- end of preloader -->
+
 
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
