--- a/guilds-details.html
+++ b/guilds-details.html
@@ -182,6 +182,7 @@
    </footer>
    
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
